[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/MainScene.gd" type="Script" id=1]
[ext_resource path="res://label_fonts.tres" type="DynamicFont" id=2]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 50, 50 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 0, -3.01468 )
points = PoolVector2Array( 0, 0, 0, 0 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D3" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D4" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Label1" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Test2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Test2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Test2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_p_c" type="Label" parent="."]
margin_left = 397.807
margin_top = 367.048
margin_right = 437.807
margin_bottom = 381.048
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_p_d" type="Label" parent="."]
margin_left = 397.807
margin_top = 442.919
margin_right = 437.807
margin_bottom = 490.919
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
